# uzum_market_drf

./: db.sqlite3  pyproject.toml
root/: settings.py  urls.py
